--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "apt-get update && apt-get install -y python3",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
