--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI="mongodb+srv://amoeezkhan01:RKlVkCAZ5Ao4zcDl@myfirstcrm.b3uax.mongodb.net/?retryWrites=true&w=majority&appName=myFirstCRM"
 JWT_SECRET="kH4#nP9$xL2&vI7@nB5*qW8#yE3$cT6!jO9"
 PORT=3001
+DEBUG=False
